Refactor:Pdf Issue

--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "mis-revision",
+  "homepage": "https://github.com/Vithu-29/IS3610-Rev",
   "private": true,
   "version": "0.0.0",
   "type": "module",
